--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -507,7 +507,7 @@
                                             <h4 class="ellipsify"><span>Prathamesh</span> </h4>
                                         </figcaption>
                                     </figure>
-                                </li>                               
+                                </li>
                                 <li>
                                     <figure>
                                         <span class="profile-img "> <img src="~/Content/images/squad/samia-iqbal.png" alt=""> </span>
@@ -711,8 +711,26 @@
                                     <figure>
                                         <span class="profile-img down-art "> <img src="~/Content/images/squad/mithul-rao.png" alt=""> </span>
                                         <figcaption>
-                                            <h5 class="ellipsify">SR. SOFTWARE PROGRAMMER</h5>
+                                            <h5 class="ellipsify">SR. SOFTWARE DEVELOPER</h5>
                                             <h4 class="ellipsify"><span>Mithul</span> Rao</h4>
+                                        </figcaption>
+                                    </figure>
+                                </li>
+                                <li>
+                                    <figure>
+                                        <span class="profile-img"> <img src="~/Content/images/squad/rahul-ugale.png" alt=""> </span>
+                                        <figcaption>
+                                            <h5 class="ellipsify">SOFTWARE DEVELOPER</h5>
+                                            <h4 class="ellipsify"><span>Rahul</span> Ugale</h4>
+                                        </figcaption>
+                                    </figure>
+                                </li>
+                                <li>
+                                    <figure>
+                                        <span class="profile-img down-art"> <img src="~/Content/images/squad/nayan.png" alt=""> </span>
+                                        <figcaption>
+                                            <h5 class="ellipsify">ART DIRECTOR</h5>
+                                            <h4 class="ellipsify"><span>Nayan</span> Sampat</h4>
                                         </figcaption>
                                     </figure>
                                 </li>
@@ -731,6 +749,15 @@
                                         <figcaption>
                                             <h5 class="ellipsify">Trainee</h5>
                                             <h4 class="ellipsify"><span>Harsh</span> Udeshi</h4>
+                                        </figcaption>
+                                    </figure>
+                                </li>
+                                <li>
+                                    <figure>
+                                        <span class="profile-img down-art"> <img src="~/Content/images/squad/alpesh.png" alt=""> </span>
+                                        <figcaption>
+                                            <h5 class="ellipsify">ADMIN</h5>
+                                            <h4 class="ellipsify"><span>Alpesh</span> Mestry</h4>
                                         </figcaption>
                                     </figure>
                                 </li>
